<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_size"
    card_view:cardCornerRadius="@dimen/corner_radius_size"
    card_view:cardElevation="@dimen/elevation_size">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_size">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_bottom_size"
            android:text="@string/name_text"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginBottom="@dimen/margin_bottom_size"
            android:text="@string/start_time_text"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginBottom="@dimen/margin_bottom_size"
            android:layout_toRightOf="@+id/start_time"
            android:text="@string/dash"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginBottom="@dimen/margin_bottom_size"
            android:layout_toRightOf="@+id/dash"
            android:text="@string/end_time_text"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/end_time"
            android:text="@string/teacher_text"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teacher"
            android:layout_marginBottom="@dimen/margin_bottom_size"
            android:text="@string/place_text"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/place"
            android:text="@string/description_text"
            android:textSize="@dimen/text_size"
            android:textStyle="italic" />
    </RelativeLayout>

</android.support.v7.widget.CardView>
